# alice-sdk

./: .gitignore  README.md  docker-compose.yml
.sourcecraft/: ci.yaml  (+1 more)
backend/: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  input.txt  openapi.yaml  tts_start.py
backend/.devcontainer/: devcontainer.json
backend/.devcontainer/nvim/: compose.yml  devcontainer.json
backend/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/postgresql/metrics/migrations/: V01__init.sql
backend/postgresql/migrations/: V02__metrics.sql
backend/postgresql/voice_statistics/: migrations.txt
backend/postgresql/voice_statistics/migrations/: V01__init.sql
backend/py-backend/: Dockerfile  README.md  openapi.yaml  requirements.txt
backend/py-backend/app/: server.py
backend/py-backend/examples/: example-client.py  example-mic-stream.py
backend/py-backend/tests/: test-ws.py
backend/src/: bridge_ai_python.cpp  greeting.cpp  greeting.hpp  greeting_benchmark.cpp  greeting_test.cpp  hello.cpp  hello.hpp  main.cpp  utils.cpp  utils.hpp
backend/src/db/metrics/: repository.cpp
backend/src/db/voice_statistics/: repository.cpp  repository.hpp
backend/src/integrations/: bridge-ai-python.cpp  bridge-ai-python.hpp
backend/src/integrations/analytics-service/: analytics-client.cpp  analytics-client.hpp
backend/src/models/: scenarios.hpp
backend/src/utils/: domain.h  getenv.cpp  getenv.hpp  send-request.cpp  send-request.hpp
backend/tests/: conftest.py  test_accept_order.py  test_basic.py
backend/unittests/: basic.cpp
backend/userver-backend/: .clang-format  .dockerignore  .gitignore  .ignore  CMakeLists.txt  Dockerfile  Makefile  README.md  openapi.tts.yaml  openapi.yaml  websocket-example.py
backend/userver-backend/.devcontainer/: devcontainer.json
backend/userver-backend/.devcontainer/nvim/: compose.nvim.yml  compose.yml
backend/userver-backend/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/userver-backend/postgresql/: migrations.txt
backend/userver-backend/src/: main.cpp
backend/userver-backend/src/classifier/: classifier.cpp  classifier.hpp  classifier_fabric.cpp  classifier_fabric.hpp  string_converter.hpp
backend/userver-backend/tests/: conftest.py  test_accept_order.py  test_basic.py
backend/userver-backend/unittests/: tests_classifier.cpp
(+286 files in other folders)
